--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="name">Sherwin Gonsalves</div>
                     <div class="about">Developer,Gamer</div>
                     <div class="buttons">
-                        <a href="/cv.txt" target="_blank">
+                        <a href="https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:7a8ed205-fd30-485a-a904-2511913ab9cf" target="_blank">
                             <button class="btn">Download CV</button></a>
                         <a href="/contact.html">
                             <button class="btn">Contact Me</button></a>
