--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
             <div class="blogcontainer">
                 
    <div class="main-video-container">
-    <video src="vid1.mp4" loop controls class="main-video"></video>
+    <video src="https://youtu.be/0lhdTnR4I0s" loop controls class="main-video"></video>
     <h3 class="main-vid-title">title1</h3>
  </div>
 
