--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
  <div class="video-list-container">
 
     <div class="list active">
-       <video src="vid1.mp4" class="list-video"></video>
+       <video src="https://youtu.be/0lhdTnR4I0s" class="list-video"></video>
        <h3 class="list-title">title1</h3>
     </div>
 
