--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,9 @@
  <div class="video-list-container">
 
     <div class="list active">
-       <video src="https://youtu.be/0lhdTnR4I0s" class="list-video"></video>
+      <iframe  
+      src="https://www.youtube.com/watch?v=0lhdTnR4I0s">
+      </iframe>
        <h3 class="list-title">title1</h3>
     </div>
 
